fix: hint alignment in enclosed inputs

--- a/src/stylus/components/_inputs.styl
+++ b/src/stylus/components/_inputs.styl
@@ -66,6 +66,7 @@ theme(v-input, "v-input")
 
   &__control
     display: flex
+    flex-direction: column
     height: auto
     flex-grow: 1
     flex-wrap: wrap
