--- a/src/stylus/components/_text-fields.styl
+++ b/src/stylus/components/_text-fields.styl
@@ -216,11 +216,12 @@ rtl(v-text-field-rtl, "v-text-field")
     .v-input__append-outer
       margin-top: 16px
 
-    .v-text-field__details
-      margin: 0 16px 8px
-
+    .v-text-field__details,
     .v-input__slot
       padding: 0 12px
+
+    .v-text-field__details
+      margin-bottom: 8px
 
   &--full-width
     &.v-input
